--- a/app/components/form-steps/form-steps.html
+++ b/app/components/form-steps/form-steps.html
@@ -1,5 +1,5 @@
 <div class="form-steps">
-    <span>Form Steps</span>
+    <!-- <span>Form Steps</span> -->
     <ul>
         <li
             ng-repeat="step in $ctrl.steps"
