--- a/app/app.css
+++ b/app/app.css
@@ -1,4 +1,48 @@
 /* app css stylesheet */
+* {
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	background: url(./images/background.jpg) no-repeat center top;
+    background-size: cover;
+    height: 100%;
+    text-align: center;
+}
+
+.logo {
+    margin: 50px 0;
+    text-align: center;
+}
+
+h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.5em;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 1.5em;
+	background: #DCDCDC;
+	color: #93bae1;
+	margin: 0 0 15px 0;
+}
+
+.form-steps {
+	padding: 20px;
+	min-width: 150px;
+	min-height: 200px;
+	background: #DCDCDC;
+	border-radius: 10px;
+	position: absolute;
+    top: 35%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -95px;
+}
 
 .menu {
   list-style: none;
